exports[`StorageUnitModalReducer CLEAR_CURRENT action 1`] = `
Object {
  "0": Object {
    "id": 3,
    "isPartOf": 2,
    "name": "Forskningens hus",
    "path": ",1,2,3,",
    "type": "Building",
    "updatedBy": 123,
    "updatedDate": "2016-01-01T00:00:00+00:00"
  },
  "currentId": null
}
`;

exports[`StorageUnitModalReducer LOAD_ROOT: fail action 1`] = `
Object {
  "root": Object {
    "error": [Error: LOAD_ROOT: has error.],
    "loaded": false,
    "loading": false
  }
}
`;

exports[`StorageUnitModalReducer LOAD_ROOT: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_ROOT: no action 1`] = `
Object {
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_ROOT: success action 1`] = `
Object {
  "root": Object {
    "data": Object {
      "path": Array [],
      "someField": 1
    },
    "loaded": true,
    "loading": false
  }
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL child: fail action 1`] = `
Object {
  "error": [Error: LOAD_SEVERAL child has error.],
  "loaded": false,
  "loading": false,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL child: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL child: no action 1`] = `
Object {
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL child: success action 1`] = `
Object {
  "data": Object {
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL: fail action 1`] = `
Object {
  "error": [Error: LOAD_SEVERAL has error.],
  "loaded": false,
  "loading": false,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL: no action 1`] = `
Object {
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer LOAD_SEVERAL: success action 1`] = `
Object {
  "data": Object {
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "root": Object {}
}
`;

exports[`StorageUnitModalReducer SET_CURRENT action 1`] = `
Object {
  "0": Object {
    "id": 3,
    "isPartOf": 2,
    "name": "Forskningens hus",
    "path": ",1,2,3,",
    "type": "Building",
    "updatedBy": 123,
    "updatedDate": "2016-01-01T00:00:00+00:00"
  },
  "currentId": 1
}
`;

exports[`StorageUnitModalReducer creates LOAD_ROOT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-modal/LOAD_ROOT"
  },
  Object {
    "result": Object {
      "id": 2,
      "isPartOf": 1,
      "name": "Utviklingsmuseet",
      "path": ",1,2,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        }
      ],
      "type": "Organisation",
      "updatedBy": 123,
      "updatedDate": "2016-01-01T00:00:00+00:00"
    },
    "type": "musit/storageunit-modal/LOAD_ROOT_SUCCESS"
  }
]
`;

exports[`StorageUnitModalReducer creates LOAD_SEVERAL_SUCCESS child when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-modal/LOAD_SEVERAL"
  },
  Object {
    "result": Array [
      Object {
        "id": 3,
        "isPartOf": 2,
        "name": "Forskningens hus",
        "path": ",1,2,3,",
        "type": "Building",
        "updatedBy": 123,
        "updatedDate": "2016-01-01T00:00:00+00:00"
      }
    ],
    "type": "musit/storageunit-modal/LOAD_SEVERAL_SUCCESS"
  }
]
`;

exports[`StorageUnitModalReducer creates LOAD_SEVERAL_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-modal/LOAD_ROOT"
  },
  Object {
    "result": Array [
      Object {
        "id": 3,
        "isPartOf": 2,
        "name": "Forskningens hus",
        "path": ",1,2,3,",
        "type": "Building",
        "updatedBy": 123,
        "updatedDate": "2016-01-01T00:00:00+00:00"
      }
    ],
    "type": "musit/storageunit-modal/LOAD_ROOT_SUCCESS"
  }
]
`;
